cluster/manifests/envoy-ratelimit/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: envoy-ratelimit
  labels:
    name: envoy-ratelimit
    pod-security.kubernetes.io/enforce: restricted
