cluster/manifests/envoy-ratelimit/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: envoy-ratelimit
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: envoy-ratelimit
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
