cluster/manifests/envoy-ratelimit/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: envoy-ratelimit
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: envoy-ratelimit
      app.kubernetes.io/component: ""
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
  - captureMode: DEFAULT
    hosts:
    - ./envoy-ratelimit-statsd.envoy-ratelimit.svc.cluster.local
    - ./envoy-ratelimit-mcrouter.envoy-ratelimit.svc.cluster.local
    - istio-system/istiod.istio-system.svc.cluster.local
    - otel/otel-agent.otel.svc.cluster.local
