cluster/manifests/envoy-ratelimit/overlays/dev/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-envoy-stats-scrape
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 15020
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-agent
spec:
  podSelector:
    matchLabels:
      telepresence.io/workloadEnabled: "true"
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 9900
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: envoy-ratelimit
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: envoy-ratelimit
      app.kubernetes.io/component: ""
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8081
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: statsd-exporter
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: envoy-ratelimit
      app.kubernetes.io/component: statsd-exporter
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: envoy-ratelimit
      podSelector:
        matchLabels:
          app.kubernetes.io/name: envoy-ratelimit
          app.kubernetes.io/component: ""
    ports:
    - protocol: TCP
      port: 9125
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: envoy-ratelimit-mcrouter
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: envoy-ratelimit
      app.kubernetes.io/component: mcrouter
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: envoy-ratelimit
      podSelector:
        matchLabels:
          app.kubernetes.io/name: envoy-ratelimit
          app.kubernetes.io/component: ""
    ports:
    - protocol: TCP
      port: 5000
